@@ -1,3 +1,10 @@
+2008-09-05  Ben Van Mechelen  <me@benvm.be>
+
+	* garmon/obd_device.py:
+	* plugins/dtc_clearer/dtc_clearer.py:
+        Fixed clear_dtc to use the async approach
+        
+
 2008-06-05  Ben Van Mechelen  <me@benvm.be>
 
 	* garmon/garmon_app.py:
